BEM architecture - fix #14

--- a/source/ui.html
+++ b/source/ui.html
@@ -169,7 +169,7 @@ add(a, b);</code></pre>
 
           <h2>Article headline</h2>
 
-          <figure class="media-obj-above">
+          <figure class="media__obj--above">
 
             <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -187,7 +187,7 @@ add(a, b);</code></pre>
 
           <h2>Article headline</h2>
 
-          <figure class="media-obj-left">
+          <figure class="media__obj--left">
 
             <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -205,7 +205,7 @@ add(a, b);</code></pre>
 
           <h2>Article headline</h2>
 
-          <figure class="float-right">
+          <figure class="media__obj--right">
 
             <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -247,7 +247,7 @@ add(a, b);</code></pre>
 
           <main>
 
-            <figure class="media-obj-right">
+            <figure class="media-_obj--right">
 
               <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -653,14 +653,14 @@ add(a, b);</code></pre>
 
         <button class="btn">Button</button>
 
-        <button class="btn btn-rounded">Button</button>
-        <button class="btn btn-pill">Button</button>
+        <button class="btn btn--rounded">Button</button>
+        <button class="btn btn--pill">Button</button>
 
-        <button class="btn btn-primary">Button</button>
-        <button class="btn btn-secondary">Button</button>
-        <button class="btn btn-success">Button</button>
-        <button class="btn btn-warning">Button</button>
-        <button class="btn btn-error">Button</button>
+        <button class="btn btn--primary">Button</button>
+        <button class="btn btn--secondary">Button</button>
+        <button class="btn btn--success">Button</button>
+        <button class="btn btn--warning">Button</button>
+        <button class="btn btn--error">Button</button>
 
       </section>
 
@@ -688,147 +688,147 @@ add(a, b);</code></pre>
 
             <div class="row">
 
-              <div class="col-4">
+              <div class="col--4">
 
-                <div class="form-field">
+                <div class="form__field">
 
                   <label for="text">Text</label>
                   <input type="text" class="input-text" id="text" placeholder="text" required >
 
-                </div> <!-- end form-field -->
+                </div> <!-- end form__field -->
 
-              </div> <!-- end col-4 -->
+              </div> <!-- end col--4 -->
 
-              <div class="col-4">
+              <div class="col--4">
 
-                <div class="form-field">
+                <div class="form__field">
 
                   <label for="password">Password</label>
                   <input type="password" class="input-text" id="password" placeholder="password" required >
 
-                </div> <!-- end form-field -->
+                </div> <!-- end form__field -->
 
-              </div> <!-- end col-4 -->
+              </div> <!-- end col--4 -->
 
-              <div class="col-4">
+              <div class="col--4">
 
-                <div class="form-field">
+                <div class="form__field">
 
                   <label for="email">Email</label>
                   <input type="email" class="input-text" id="email" autocapitalize="off" autocorrect="off" placeholder="email" required >
 
-                </div> <!-- end form-field -->
+                </div> <!-- end form__field -->
 
-              </div> <!-- end col-4 -->
+              </div> <!-- end col--4 -->
 
             </div> <!-- end row -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="url">URL</label>
               <input type="url" class="input-text" id="url">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="tel">Telephone</label>
               <input type="tel" class="input-text" id="tel">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="search">Search</label>
               <input type="search" class="input-text" id="search">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="output">Output</label>
               <output id="output"></output>
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="color">Color</label>
               <input type="color" id="color">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="number">Number</label>
               <input type="number" class="input-text" id="number">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="range">Range</label>
               <input type="range" class="input-text" id="range">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="image">Image</label>
               <input type="image" alt="Alt Tag goes here" class="input-text" id="image">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="date">Date</label>
               <input type="date" class="input-text" id="date">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="datetime">Datetime</label>
               <input type="datetime" class="input-text" id="datetime">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="datetime-local">Datetime-local</label>
               <input type="datetime-local" class="input-text" id="datetime-local">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="week">Week</label>
               <input type="week" class="input-text" id="week">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="month">Month</label>
               <input type="month" class="input-text" id="month">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="time">Time</label>
               <input type="time" class="input-text" id="time">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="file">File</label>
               <input type="file" class="input-text" id="file">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <div class="checkbox-container">
 
@@ -865,9 +865,9 @@ add(a, b);</code></pre>
 
               </div> <!-- end checkbox-container -->
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <div class="radio-container">
 
@@ -904,9 +904,9 @@ add(a, b);</code></pre>
 
               </div> <!-- end radio-container -->
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="select">Select</label>
               <select id="select">
@@ -922,9 +922,9 @@ add(a, b);</code></pre>
                 </optgroup>
               </select>
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="datalist">Datalist</label>
               <input list="browsers" id="datalist">
@@ -936,33 +936,33 @@ add(a, b);</code></pre>
                 <option value="Internet Explorer">Internet Expolorer</option>
               </datalist>
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="keygen">Keygen</label>
               <keygen id="keygen">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label for="textarea">Textarea</label>
               <textarea class="input-textarea" id="textarea"></textarea>
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <input type="reset" value="Reset" class="input-reset">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <input type="submit" value="Submit" class="input-submit">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
           </fieldset>
 
@@ -974,32 +974,32 @@ add(a, b);</code></pre>
 
           <fieldset>
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label>Name</label>
               <input type="text" class="input-text">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label>Password</label>
               <input type="password" class="input-text">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <label>Remember Password</label>
               <input type="checkbox" class="input-checkbox">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
-            <div class="form-field">
+            <div class="form__field">
 
               <input type="submit" value="Login" class="input-submit">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
           </fieldset>
 
@@ -1011,12 +1011,12 @@ add(a, b);</code></pre>
 
           <fieldset>
 
-            <div class="form-field">
+            <div class="form__field">
 
               <input type="search" class="input-search" placeholder="Search">
               <input type="submit" class="input-submit">
 
-            </div> <!-- end form-field -->
+            </div> <!-- end form__field -->
 
           </fieldset>
 
@@ -1040,7 +1040,7 @@ add(a, b);</code></pre>
 
         <h2>Navigation</h2>
 
-        <nav class="nav horizontal dropdown">
+        <nav class="nav nav--horizontal nav--dropdown">
 
           <ul>
             <li><a href="#">Level 1 Item 1</a></li>
@@ -1068,7 +1068,7 @@ add(a, b);</code></pre>
 
         </nav>
 
-        <nav class="nav vertical dropdown">
+        <nav class="nav nav--vertical nav--dropdown">
 
           <ul>
             <li><a href="#">Level 1 Item 1</a></li>
@@ -1130,113 +1130,113 @@ add(a, b);</code></pre>
 
         <div class="row">
 
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
-          <div class="col-1">col-1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
+          <div class="col--1">col--1</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-2">col-2</div>
-          <div class="col-2">col-2</div>
-          <div class="col-2">col-2</div>
-          <div class="col-2">col-2</div>
-          <div class="col-2">col-2</div>
-          <div class="col-2">col-2</div>
+          <div class="col--2">col--2</div>
+          <div class="col--2">col--2</div>
+          <div class="col--2">col--2</div>
+          <div class="col--2">col--2</div>
+          <div class="col--2">col--2</div>
+          <div class="col--2">col--2</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-3">col-3</div>
-          <div class="col-3">col-3</div>
-          <div class="col-3">col-3</div>
-          <div class="col-3">col-3</div>
+          <div class="col--3">col--3</div>
+          <div class="col--3">col--3</div>
+          <div class="col--3">col--3</div>
+          <div class="col--3">col--3</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-4">col-4</div>
-          <div class="col-4">col-4</div>
-          <div class="col-4">col-4</div>
+          <div class="col--4">col--4</div>
+          <div class="col--4">col--4</div>
+          <div class="col--4">col--4</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-5">col-5</div>
-          <div class="col-5">col-5</div>
-          <div class="col-2">col-2</div>
+          <div class="col--5">col--5</div>
+          <div class="col--5">col--5</div>
+          <div class="col--2">col--2</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-6">
+          <div class="col--6">
 
-            col-6
+            col--6
 
             <div class="row">
 
-              <div class="col-6">col-6</div>
-              <div class="col-6">col-6</div>
+              <div class="col--6">col--6</div>
+              <div class="col--6">col--6</div>
 
             </div> <!-- end row -->
 
           </div>
-          <div class="col-6">col-6</div>
+          <div class="col--6">col--6</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-7">col-7</div>
-          <div class="col-5">col-5</div>
+          <div class="col--7">col--7</div>
+          <div class="col--5">col--5</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-8">col-8</div>
-          <div class="col-4">col-4</div>
+          <div class="col--8">col--8</div>
+          <div class="col--4">col--4</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-9">col-9</div>
-          <div class="col-3">col-3</div>
+          <div class="col--9">col--9</div>
+          <div class="col--3">col--3</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-10">col-10</div>
-          <div class="col-2">col-2</div>
+          <div class="col--10">col--10</div>
+          <div class="col--2">col--2</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-11">col-11</div>
-          <div class="col-1">col-1</div>
+          <div class="col--11">col--11</div>
+          <div class="col--1">col--1</div>
 
         </div> <!-- end row -->
 
         <div class="row">
 
-          <div class="col-12">col-12</div>
+          <div class="col--12">col--12</div>
 
         </div> <!-- end row -->
 
