--- a/source/ui.html
+++ b/source/ui.html
@@ -43,7 +43,7 @@
 
        <h1>UI-KIT</h1>
 
-      </div> <!-- end container -->
+      </div>
 
     </header>
 
@@ -585,7 +585,7 @@ add(a, b);</code></pre>
 
           </audio>
 
-        </div> <!-- end audio -->
+        </div>
 
         <h3>Soundcloud</h3>
 
@@ -593,7 +593,7 @@ add(a, b);</code></pre>
 
           <iframe width="100%" height="300" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/168884491&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
-        </div> <!-- end audio -->
+        </div>
 
         <h3>Video</h3>
 
@@ -607,7 +607,7 @@ add(a, b);</code></pre>
 
           </video>
 
-        </div> <!-- end video -->
+        </div>
 
         <h3>YouTube</h3>
 
@@ -615,7 +615,7 @@ add(a, b);</code></pre>
 
           <iframe width="1280" height="720" src="http://www.youtube.com/embed/VpZmIiIXuZ0?rel=0" allowfullscreen></iframe>
 
-        </div> <!-- end video -->
+        </div>
 
         <div class="video">
 
@@ -626,7 +626,7 @@ add(a, b);</code></pre>
             <embed src="http://www.youtube.com/v/VpZmIiIXuZ0?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="1280" height="720" allowscriptaccess="always" allowfullscreen="true"></embed>
           </object>
 
-        </div> <!-- end video -->
+        </div>
 
         <h3>Vimeo</h3>
 
@@ -634,7 +634,7 @@ add(a, b);</code></pre>
 
           <iframe src="http://player.vimeo.com/video/106099077" width="1280" height="719" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-        </div> <!-- end video -->
+        </div>
 
         <h3>SWF</h3>
 
@@ -695,9 +695,9 @@ add(a, b);</code></pre>
                   <label for="text">Text</label>
                   <input type="text" class="input-text" id="text" placeholder="text" required >
 
-                </div> <!-- end form__field -->
+                </div>
 
-              </div> <!-- end col--4 -->
+              </div>
 
               <div class="col--4">
 
@@ -706,9 +706,9 @@ add(a, b);</code></pre>
                   <label for="password">Password</label>
                   <input type="password" class="input-text" id="password" placeholder="password" required >
 
-                </div> <!-- end form__field -->
+                </div>
 
-              </div> <!-- end col--4 -->
+              </div>
 
               <div class="col--4">
 
@@ -717,116 +717,116 @@ add(a, b);</code></pre>
                   <label for="email">Email</label>
                   <input type="email" class="input-text" id="email" autocapitalize="off" autocorrect="off" placeholder="email" required >
 
-                </div> <!-- end form__field -->
+                </div>
 
-              </div> <!-- end col--4 -->
+              </div>
 
-            </div> <!-- end row -->
+            </div>
 
             <div class="form__field">
 
               <label for="url">URL</label>
               <input type="url" class="input-text" id="url">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="tel">Telephone</label>
               <input type="tel" class="input-text" id="tel">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="search">Search</label>
               <input type="search" class="input-text" id="search">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="output">Output</label>
               <output id="output"></output>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="color">Color</label>
               <input type="color" id="color">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="number">Number</label>
               <input type="number" class="input-text" id="number">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="range">Range</label>
               <input type="range" class="input-text" id="range">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="image">Image</label>
               <input type="image" alt="Alt Tag goes here" class="input-text" id="image">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="date">Date</label>
               <input type="date" class="input-text" id="date">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="datetime">Datetime</label>
               <input type="datetime" class="input-text" id="datetime">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="datetime-local">Datetime-local</label>
               <input type="datetime-local" class="input-text" id="datetime-local">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="week">Week</label>
               <input type="week" class="input-text" id="week">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="month">Month</label>
               <input type="month" class="input-text" id="month">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="time">Time</label>
               <input type="time" class="input-text" id="time">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="file">File</label>
               <input type="file" class="input-text" id="file">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
@@ -835,37 +835,37 @@ add(a, b);</code></pre>
                 <label for="checkbox-1">Checkbox 1</label>
                 <input type="checkbox" id="checkbox-1">
 
-              </div> <!-- end checkbox-container -->
+              </div>
 
               <div class="checkbox-container">
 
                 <label for="checkbox-2">Checkbox 2</label>
                 <input type="checkbox" id="checkbox-2">
 
-              </div> <!-- end checkbox-container -->
+              </div>
 
               <div class="checkbox-container">
 
                 <label for="checkbox-3">Checkbox 3</label>
                 <input type="checkbox" id="checkbox-3">
 
-              </div> <!-- end checkbox-container -->
+              </div>
 
               <div class="checkbox-container">
 
                 <label for="checkbox-4">Checkbox 4</label>
                 <input type="checkbox" id="checkbox-4">
 
-              </div> <!-- end checkbox-container -->
+              </div>
 
               <div class="checkbox-container">
 
                 <label for="checkbox-5">Checkbox 5</label>
                 <input type="checkbox" id="checkbox-5">
 
-              </div> <!-- end checkbox-container -->
+              </div>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
@@ -874,37 +874,37 @@ add(a, b);</code></pre>
                 <label for="radio-1">Radio 1</label>
                 <input type="radio" name="radio" id="radio-1">
 
-              </div> <!-- end radio-container -->
+              </div>
 
               <div class="radio-container">
 
                 <label for="radio-2">Radio 2</label>
                 <input type="radio" name="radio" id="radio-2">
 
-              </div> <!-- end radio-container -->
+              </div>
 
               <div class="radio-container">
 
                 <label for="radio-3">Radio 3</label>
                 <input type="radio" name="radio" id="radio-3">
 
-              </div> <!-- end radio-container -->
+              </div>
 
               <div class="radio-container">
 
                 <label for="radio-4">Radio 4</label>
                 <input type="radio" name="radio" id="radio-4">
 
-              </div> <!-- end radio-container -->
+              </div>
 
               <div class="radio-container">
 
                 <label for="radio-5">Radio 5</label>
                 <input type="radio" name="radio" id="radio-5">
 
-              </div> <!-- end radio-container -->
+              </div>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
@@ -922,7 +922,7 @@ add(a, b);</code></pre>
                 </optgroup>
               </select>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
@@ -936,33 +936,33 @@ add(a, b);</code></pre>
                 <option value="Internet Explorer">Internet Expolorer</option>
               </datalist>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="keygen">Keygen</label>
               <keygen id="keygen">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label for="textarea">Textarea</label>
               <textarea class="input-textarea" id="textarea"></textarea>
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <input type="reset" value="Reset" class="input-reset">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <input type="submit" value="Submit" class="input-submit">
 
-            </div> <!-- end form__field -->
+            </div>
 
           </fieldset>
 
@@ -979,27 +979,27 @@ add(a, b);</code></pre>
               <label>Name</label>
               <input type="text" class="input-text">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label>Password</label>
               <input type="password" class="input-text">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <label>Remember Password</label>
               <input type="checkbox" class="input-checkbox">
 
-            </div> <!-- end form__field -->
+            </div>
 
             <div class="form__field">
 
               <input type="submit" value="Login" class="input-submit">
 
-            </div> <!-- end form__field -->
+            </div>
 
           </fieldset>
 
@@ -1016,7 +1016,7 @@ add(a, b);</code></pre>
               <input type="search" class="input-search" placeholder="Search">
               <input type="submit" class="input-submit">
 
-            </div> <!-- end form__field -->
+            </div>
 
           </fieldset>
 
@@ -1143,7 +1143,7 @@ add(a, b);</code></pre>
           <div class="col--1">col--1</div>
           <div class="col--1">col--1</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
@@ -1154,7 +1154,7 @@ add(a, b);</code></pre>
           <div class="col--2">col--2</div>
           <div class="col--2">col--2</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
@@ -1163,7 +1163,7 @@ add(a, b);</code></pre>
           <div class="col--3">col--3</div>
           <div class="col--3">col--3</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
@@ -1171,7 +1171,7 @@ add(a, b);</code></pre>
           <div class="col--4">col--4</div>
           <div class="col--4">col--4</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
@@ -1179,7 +1179,7 @@ add(a, b);</code></pre>
           <div class="col--5">col--5</div>
           <div class="col--2">col--2</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
@@ -1192,57 +1192,57 @@ add(a, b);</code></pre>
               <div class="col--6">col--6</div>
               <div class="col--6">col--6</div>
 
-            </div> <!-- end row -->
+            </div>
 
           </div>
           <div class="col--6">col--6</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--7">col--7</div>
           <div class="col--5">col--5</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--8">col--8</div>
           <div class="col--4">col--4</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--9">col--9</div>
           <div class="col--3">col--3</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--10">col--10</div>
           <div class="col--2">col--2</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--11">col--11</div>
           <div class="col--1">col--1</div>
 
-        </div> <!-- end row -->
+        </div>
 
         <div class="row">
 
           <div class="col--12">col--12</div>
 
-        </div> <!-- end row -->
+        </div>
 
       </section>
 
-      </div> <!-- end container-->
+      </div>
 
     </main>
 
@@ -1254,7 +1254,7 @@ add(a, b);</code></pre>
 
         <a href="#top" class="scroll-top">scrollTop</a>
 
-      </div> <!-- end container -->
+      </div>
 
     </footer>
 
