--- a/source/ui.html
+++ b/source/ui.html
@@ -171,7 +171,7 @@ add(a, b);</code></pre>
 
           <figure class="media__obj--above">
 
-            <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+            <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
             <figcaption>Image Caption</figcaption>
 
@@ -189,7 +189,7 @@ add(a, b);</code></pre>
 
           <figure class="media__obj--left">
 
-            <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+            <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
             <figcaption>Image Caption</figcaption>
 
@@ -207,7 +207,7 @@ add(a, b);</code></pre>
 
           <figure class="media__obj--right">
 
-            <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+            <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
             <figcaption>Image Caption</figcaption>
 
@@ -229,7 +229,7 @@ add(a, b);</code></pre>
 
           <figure>
 
-            <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+            <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
             <figcaption>Image Caption</figcaption>
 
@@ -249,7 +249,7 @@ add(a, b);</code></pre>
 
             <figure class="media-_obj--right">
 
-              <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+              <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
               <figcaption>Image Caption</figcaption>
 
@@ -402,8 +402,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-01.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-01.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -416,8 +416,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-02.jpg" data-fancybox-group="gallery" class="fancybox">
-                    <img src="../assets/img/gallery/image-02.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                    <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                   </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -430,8 +430,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-03.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-03.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -444,8 +444,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-04.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-04.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -458,8 +458,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-05.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-05.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -472,8 +472,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-06.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-06.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -486,8 +486,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-07.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-07.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -500,8 +500,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-08.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-08.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -514,8 +514,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-09.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-09.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -528,8 +528,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-10.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-10.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -542,8 +542,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-11.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-11.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
@@ -556,8 +556,8 @@ add(a, b);</code></pre>
 
               <figure>
 
-                <a href="../assets/img/gallery/image-12.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-12.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="http://dummyimage.com/460x345/808080/fff.png">
+                  <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
                 </a>
 
                 <figcaption>Figcaption</figcaption>
