--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
 
   <!--[if lt IE 9]>
-    <script src="../bower_components/html5shiv/dist/html5shiv.min.js"></script>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
 </head>
