add assemble task

--- a/source/403.html
+++ b/source/403.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
-  <title>Error 403 | Access Denied</title>
+  <title>404 | Access denied</title>
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Search Engine -->
+
+  <meta name="description" content="max 155 Chars">
+  <meta name="keywords" content="10 words">
+  <meta name="robots" content="index, follow">
+
+  <!-- Mobile & Windows 8 -->
+
+  <meta name="application-name" content="Website">
+  <meta name="apple-mobile-web-app-title" content="Website">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+
+  <!-- Styles -->
+
+  <meta name="theme-color" content="#fff">
+
+  <!-- Stylesheets -->
+
+  <!-- build:css css/style.css -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- endbuild -->
+
+  <!-- Icons -->
+
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" href="apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+
+  <!--[if lt IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
 
 </head>
+
+
 <body>
+
+  <header class="header">
+
+  <div class="container">
+
+    <h1>404 | Access denied</h1>
+
+  </div>
+
+</header>
+
+
+  <main class="main">
+
+    <div class="container">
+
+      
+
+<h1>Error 403 - Access denied</h1>
+
+
+    </div>
+
+  </main>
+
+  <footer class="footer">
+
+  <div class="container">
+
+    FOOTER
+
+  </div>
+
+</footer>
+
+
+  <!-- build:js js/script.js -->
+  <script src="js/script.js"></script>
+  <!-- endbuild -->
 
 </body>
 </html>
