--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -31,19 +32,9 @@
 
   <!-- Icons -->
 
-  <link rel="shortcut icon" href="favicon.ico"> <!-- 48 x 48px-->
-  <link rel="icon" sizes="16x16" href="favicon-16x16.png" >
-  <link rel="icon" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" sizes="96x96" href="favicon-96x96.png">
-  <link rel="icon" sizes="192x192" href="favicon-192x192.png">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" href="apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
 
   <!--[if lt IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -58,18 +49,26 @@
 
   <div class="container">
 
-      HEADER
+    <h1>Website</h1>
 
-    </div>
+  </div>
 
-  </header>
+</header>
 
 
   <main class="main">
 
     <div class="container">
 
-      MAIN
+      
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 
     </div>
 
@@ -77,13 +76,13 @@
 
   <footer class="footer">
 
-    <div class="container">
+  <div class="container">
 
-      FOOTER
+    FOOTER
 
-    </div>
+  </div>
 
-  </footer>
+</footer>
 
 
   <!-- build:js js/script.js -->
