--- a/source/404.html
+++ b/source/404.html
@@ -18,7 +18,7 @@
 
   <meta name="application-name" content="Website">
   <meta name="apple-mobile-web-app-title" content="Website">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Styles -->
 
@@ -32,7 +32,7 @@
 
   <!-- Icons -->
 
-  <link rel="shortcut icon" href="favicon.ico">
+  <!-- place favicon.ico (48x48) in root folder -->
   <link rel="icon" href="apple-touch-icon-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
 
