update seo meta information: - remove meta key tag - insert description dynamically

--- a/source/403.html
+++ b/source/403.html
@@ -10,8 +10,7 @@
 
   <!-- Search Engine -->
 
-  <meta name="description" content="max 155 Chars">
-  <meta name="keywords" content="10 words">
+  <meta name="description" content="Description goes here">
 
   <!-- Mobile & Windows 8 -->
 
