--- a/source/404.html
+++ b/source/404.html
@@ -10,8 +10,7 @@
 
   <!-- Search Engine -->
 
-  <meta name="description" content="max 155 Chars">
-  <meta name="keywords" content="10 words">
+  <meta name="description" content="Description goes here">
 
   <!-- Mobile & Windows 8 -->
 
