rename site section selectors

--- a/source/ui.html
+++ b/source/ui.html
@@ -43,7 +43,7 @@
 
 <body>
 
-  <header class="header">
+  <header class="site__header">
 
   <div class="container">
 
@@ -54,7 +54,7 @@
 </header>
 
 
-  <main class="main">
+  <main class="site__main">
 
     <div class="container">
 
@@ -1256,7 +1256,7 @@ add(a, b);</code></pre>
 
   </main>
 
-  <footer class="footer">
+  <footer class="site__footer">
 
   <div class="container">
 
