--- a/source/ui.html
+++ b/source/ui.html
@@ -585,7 +585,7 @@ add(a, b);</code></pre>
 
   <h3>Audio</h3>
 
-  <div class="audio">
+  <div class="embed embed--16-9">
 
     <audio controls>
 
@@ -598,7 +598,7 @@ add(a, b);</code></pre>
 
   <h3>Soundcloud</h3>
 
-  <div class="audio">
+  <div class="embed embed--16-9">
 
     <iframe width="100%" height="300" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/168884491&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
@@ -606,7 +606,7 @@ add(a, b);</code></pre>
 
   <h3>Video</h3>
 
-  <div class="video">
+  <div class="embed embed--16-9">
 
     <video width="1920" height="1080" controls>
 
@@ -620,13 +620,13 @@ add(a, b);</code></pre>
 
   <h3>YouTube</h3>
 
-  <div class="video">
+  <div class="embed embed--16-9">
 
     <iframe width="1280" height="720" src="http://www.youtube.com/embed/VpZmIiIXuZ0?rel=0" allowfullscreen></iframe>
 
   </div>
 
-  <div class="video">
+  <div class="embed embed--16-9">
 
     <object width="1280" height="720">
       <param name="movie" value="http://www.youtube.com/v/VpZmIiIXuZ0?version=3&amp;hl=en_US&amp;rel=0"></param>
@@ -639,7 +639,7 @@ add(a, b);</code></pre>
 
   <h3>Vimeo</h3>
 
-  <div class="video">
+  <div class="embed embed--16-9">
 
     <iframe src="http://player.vimeo.com/video/106099077" width="1280" height="719" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
