--- a/source/ui.html
+++ b/source/ui.html
@@ -713,7 +713,7 @@ add(a, b);</code></pre>
           <div class="form__field">
 
             <label for="password-input" id="password-label">Password</label>
-            <input type="password" id="password-input" placeholder="password-label" aria-describedby="password" required >
+            <input type="password" id="password-input" placeholder="password" aria-describedby="password" required >
 
           </div>
 
@@ -1137,7 +1137,7 @@ add(a, b);</code></pre>
 
 </section>
 
-<section class="section-grid">
+<section>
 
   <h3>Grid</h3>
 
