--- a/source/404.html
+++ b/source/404.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <title>404 | File not found</title>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <!-- Search Engine -->
 
