add layouts and add wai-aria tags

--- a/source/404.html
+++ b/source/404.html
@@ -43,7 +43,7 @@
 
 <body>
 
-  <header class="site__header">
+  <header class="site__header" role="banner">
 
   <div class="container">
 
@@ -54,20 +54,20 @@
 </header>
 
 
-  <main class="site__main">
+  <main class="site__main" role="main">
 
-    <div class="container">
+    
 
-      
+<div class="container">
 
-<h1>Error 404 - File not found</h1>
+  <h1>Error 404 - File not found</h1>
 
+</div>
 
-    </div>
 
   </main>
 
-  <footer class="site__footer">
+  <footer class="site__footer" role="contentinfo">
 
   <div class="container">
 
