--- a/source/404.html
+++ b/source/404.html
@@ -52,9 +52,11 @@
   
   </header>
 
-  <main class="site__main" role="main">
+  <div class="site__container">
 
-    
+    <main class="site__main" role="main">
+
+      
 
 <div class="container">
 
@@ -63,7 +65,9 @@
 </div>
 
 
-  </main>
+    </main>
+
+  </div>
 
   <footer class="site__footer" role="contentinfo">
   
