--- a/source/index.html
+++ b/source/index.html
@@ -52,18 +52,18 @@
   
   </header>
 
-  <main class="site__main" role="main">
+  <div class="site__container">
 
-    
+    <main class="site__main" role="main">
 
-<div class="container">
+      
 
-  MAIN
-
-</div>
+MAIN
 
 
-  </main>
+    </main>
+
+  </div>
 
   <footer class="site__footer" role="contentinfo">
   
