improve media component

--- a/source/ui.html
+++ b/source/ui.html
@@ -178,7 +178,7 @@
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--above">
+      <figure class="media__obj">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -196,7 +196,7 @@
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--left">
+      <figure class="media__obj media__obj--left">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -214,7 +214,7 @@
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--right">
+      <figure class="media__obj media__obj--right">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -256,7 +256,7 @@
 
       <main>
 
-        <figure class="media-_obj--right">
+        <figure class="media__obj media-_obj--right">
 
           <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
