update grid system

--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
 
   <header class="site__header" role="banner">
   
-    <div class="container">
+    <div class="grid__container">
   
       <h1>Website</h1>
   
@@ -58,7 +58,11 @@
 
       
 
-MAIN
+<div class="grid__container">
+
+  MAIN
+
+</div>
 
 
     </main>
@@ -67,7 +71,7 @@ MAIN
 
   <footer class="site__footer" role="contentinfo">
   
-    <div class="container">
+    <div class="grid__container">
   
       FOOTER
   
