--- a/source/404.html
+++ b/source/404.html
@@ -44,7 +44,7 @@
 
   <header class="site__header" role="banner">
   
-    <div class="container">
+    <div class="grid__container">
   
       <h1>404 | File not found</h1>
   
@@ -58,7 +58,7 @@
 
       
 
-<div class="container">
+<div class="grid__container">
 
   <h1>Error 404 - File not found</h1>
 
@@ -71,7 +71,7 @@
 
   <footer class="site__footer" role="contentinfo">
   
-    <div class="container">
+    <div class="grid__container">
   
       FOOTER
   
