--- a/source/ui.html
+++ b/source/ui.html
@@ -289,7 +289,7 @@
 
     <h3>Unorderd List</h3>
 
-    <ul class="list">
+    <ul>
       <li>List Item 1</li>
       <li>List Item 2
         <ul>
@@ -305,7 +305,7 @@
 
     <h3>Orderd List</h3>
 
-    <ol class="list">
+    <ol>
       <li>List Item 1</li>
       <li>List Item 2
         <ol>
@@ -334,7 +334,7 @@
 
     <h3>Table</h3>
 
-    <table class="table">
+    <table>
       <caption>Table Caption</caption>
       <colgroup>
         <col span="2" style="background-color: #ccc;">
