add schema markup to table - #5

--- a/source/ui.html
+++ b/source/ui.html
@@ -329,34 +329,32 @@ add(a, b);</code></pre>
 
           <h3>Table</h3>
 
-          <table>
-            <caption>Table Caption</caption>
-            <colgroup>
-              <col span="2" style="background-color: #ccc;">
-              <col>
-            </colgroup>
-            <thead>
-              <tr>
-                <th>Item 1</th>
-                <th>Item 2</th>
-                <th>Item 3</th>
-              </tr>
-            </thead>
-            <tfoot>
-              <tr>
-                <th>Item 1</th>
-                <th>Item 2</th>
-                <th>Item 3</th>
-              </tr>
-            </tfoot>
-            <tbody>
-              <tr>
-                <th>Item 1</th>
-                <th>Item 2</th>
-                <th>Item 3</th>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table" itemscope itemtype="http://schema.org/Table">
+            <table>
+              <caption>Table Caption</caption>
+              <thead>
+                <tr>
+                  <th>Item 1</th>
+                  <th>Item 2</th>
+                  <th>Item 3</th>
+                </tr>
+              </thead>
+              <tfoot>
+                <tr>
+                  <th>Item 1</th>
+                  <th>Item 2</th>
+                  <th>Item 3</th>
+                </tr>
+              </tfoot>
+              <tbody>
+                <tr>
+                  <th>Item 1</th>
+                  <th>Item 2</th>
+                  <th>Item 3</th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
 
         </section>
 
